--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-json-to-table": "^0.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
