--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "fuse.js": "^3.4.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-json-to-table": "file:../../react-json-to-table",
+    "react-json-to-table": "github:taichoup/react-json-to-table",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
