--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fuse.js": "^3.4.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-draggable": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
