--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-draggable": "^4.3.1",
+    "react-new-window": "^0.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
@@ -40,5 +41,8 @@
   },
   "devDependencies": {
     "eslint-plugin-react-hooks": "^2.5.0"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
   }
 }
