--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "eslint-plugin-react-hooks": "^2.5.0"
   },
   "resolutions": {
-    "@babel/preset-env": "7.5.5"
+    "@babel/preset-env": "7.5.5",
+    "yargs-parser": ">=18.1.2",
+    "serialize-javascript": ">=3.1.0",
+    "object-path": ">=0.11.5",
+    "ini": ">1.3.6"
   }
 }
