--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --verbose --runInBand",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,7 +40,8 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^2.5.0"
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "jest": "^26.6.3"
   },
   "resolutions": {
     "@babel/preset-env": "7.5.5",
