--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "jest": "^26.6.3"
+    "eslint-plugin-react-hooks": "^2.5.0"
   },
   "resolutions": {
     "@babel/preset-env": "7.5.5",
